# portfolio

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  generate-lockfiles.yml
apps/app/: next.config.ts  package.json  tsconfig.json
apps/worker/: pyproject.toml  vercel.json
apps/worker/api/: index.py
apps/worker/portfolio_worker/: __init__.py  api.py  archive.py  config.py  crypto.py  daily.py  fingerprint.py  gmail.py  gmail_oauth.py  gmail_sync.py  import_service.py  ledger.py  lots.py  market_sync.py  models.py  performance.py  reconciliation.py  repository.py  security.py  valuation.py
apps/worker/portfolio_worker/parsers/: __init__.py  base.py  george_pdf.py  patria_html.py  pdf.py  statement_text.py  xtb_csv.py
apps/worker/portfolio_worker/providers/: __init__.py  fx.py  market.py
apps/worker/tests/: test_archive.py  test_crypto.py  test_daily.py  test_fingerprint.py  test_fx.py  test_gmail.py  test_gmail_oauth.py  test_gmail_sync.py  test_import_service.py  test_ledger.py  test_lots.py  test_market.py  test_market_sync.py  test_parsers.py  test_pdf.py  test_performance.py  test_reconciliation.py  test_repository_integration.py  test_security.py  test_statement_text.py  test_valuation.py
docs/: runbook.md
docs/adr/: 0003-fx-convention.md  (+5 more)
migrations/: 0001_initial.sql  0002_roles_and_grants.sql  0003_posting_constraints.sql  0004_app_read_views.sql  0005_performance_metrics.sql  0006_george_pdf_and_chatgpt_import.sql
tests/: smoke.mjs
(+38 files in other folders)
