[project]
name = "portfolio-worker"
version = "0.1.0"
description = "Cloud-only import, ledger, valuation and reconciliation worker"
requires-python = "==3.13.*"
dependencies = [
  "beautifulsoup4==4.15.0",
  "cryptography==49.0.0",
  "defusedxml==0.7.1",
  "fastapi==0.139.2",
  "google-api-python-client==2.198.0",
  "google-auth>=2.40,<3",
  "httpx>=0.28,<1",
  "psycopg[binary,pool]==3.3.4",
  "pydantic==2.13.4",
  "pypdf==6.14.2",
  "python-multipart>=0.0.20,<1",
  "vercel==0.7.2"
]

[dependency-groups]
dev = [
  "hypothesis>=6.130,<7",
  "pytest==9.1.1",
  "pytest-cov>=7,<8",
  "ruff>=0.12,<1"
]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S106"]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_worker"]
